--- a/project/elder-project/src/main/resources/static/js/views/community/course/courseDetail.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/course/courseDetail.html
@@ -1,104 +1,67 @@
-<ion-view style="background:#f8f8f8;" ng-if="!param.startCourseFlag">
-	<!--<ion-header-bar align-title="center" class="bar-energized">-->
-		<!--<div class="buttons">-->
-			<!--<button class="button" ng-click="returnRootNative()">&lt;返回</button>-->
-		<!--</div>-->
-		<!--<h1 class="title">{{param.onlineCourseDetail.onlineCourseName}}</h1>-->
-	<!--</ion-header-bar>-->
-	<ion-content>
-		<img class="full-image" style="height:150px"
-			 ng-src="{{param.onlineCourseDetail.onlineCourseLogo}}">
-		<!--<p style="color:black;margin-left:25px;margin-top:15px;">-->
-			<!--<i class="icon ion-clock"></i>&nbsp;<span>课程时长</span>&nbsp;&nbsp;&nbsp;&nbsp;-->
-			<!--{{param.onlineCourseDetail.onlineCourseDuration}}小时</p>-->
-		<!--<div class="list" style="margin-top:15px;">-->
-			<!--<div class="item item-divider">-->
-				<!--课程简介-->
-			<!--</div>-->
-			<!--<a class="item item-text-wrap" style="color: black;font-size:12px;">-->
-				<!--{{param.onlineCourseDetail.onlineCourseOutline}}-->
-			<!--</a>-->
-		<!--</div>-->
-		<div class="list" style="margin-top:50px;">
+<ion-view style="background:#f8f8f8;">
+
+        <div style="margin-top:10px;">
+            <video ng-src="{{param.playURL}}" autoplay="true"
+                   controls="controls" style="height:200px;width:100%;" />
+        </div>
+        <div class="tabs tabs-top tabs-striped" style="top:207px;background:#fff;border-bottom:0px;">
+            <a ng-class="{true:'tab-item active',false:'tab-item'}[param.operation=='introduce']"
+               style="border-color: #ff8e01;"
+               ng-click="introduce()" class="tab-item active">
+                <p>简介</p>
+            </a>
+            <a ng-class="{true:'tab-item active',false:'tab-item'}[param.operation=='discuss']"
+               style="border-color: #ff8e01;"
+               ng-click="discuss()" class="tab-item">
+                <p>评论</p>
+            </a>
+        </div>
+    <ion-content style="top:209px;">
+		<div ng-if="param.operation == 'introduce'" class="list" style="margin:52px 0px 40px;">
 			<a class="item item-avatar item-text-wrap serviceDetail_cont" style="border:none;background:#f8f8f8;padding-left:20px;">
-				<h2><span>{{param.onlineCourseDetail.onlineCourseName}}</span></h2>
-				<p>主题：{{param.onlineCourseDetail.onlineCourseLabel}}</p>
-				<p>主讲人介绍：{{param.onlineCourseDetail.onlineCourseTeacherName}}<br/>{{param.onlineCourseDetail.onlineCourseTeacherLevel}}</p>
-				<p>时长：{{param.onlineCourseDetail.onlineCourseDuration}}小时</p>
-                <br><br>
-				<h2><span>课程简介</span></h2>
+				<h2>{{param.onlineCourseDetail.onlineCourseName}}</h2>
+                <p>主题：{{param.onlineCourseDetail.onlineCourseLabel}}</p>
+                <p>主讲人介绍：{{param.onlineCourseDetail.onlineCourseTeacherName}}<br/>{{param.onlineCourseDetail.onlineCourseTeacherLevel}}</p>
+                <p>时长：{{param.onlineCourseDetail.onlineCourseDuration}}小时</p>
+                <br>
+                <h2>课程简介</h2>
 				<p>{{param.onlineCourseDetail.onlineCourseOutline}}</p>
+                <br>
+                <h2>课程目录</h2>
+                <div class="list" ng-repeat="item in param.onlineCourseDetail.onLineCourseDataDTOList">
+                    <p style="font-size:15px;color:#ff8e01;" ng-click="playCourse($index)" ng-if="param.playIndex==$index">
+                        {{item.onlineCourseName}}&nbsp;&nbsp;&nbsp;&nbsp;{{item.onlineCourseDuration}}小时
+                    </p>
+                    <p style="font-size:15px;" ng-click="playCourse($index)" ng-if="param.playIndex!=$index">
+                        {{item.onlineCourseName}}&nbsp;&nbsp;&nbsp;&nbsp;{{item.onlineCourseDuration}}小时
+                    </p>
+                </div>
 			</a>
 		</div>
-		<div style="background:white;width:90%;margin-left:5%;">
-			<h2 style="font-size:1px;">&nbsp;&nbsp;</h2>
-			<h1 style="font-size: 15px;color: blue;margin-left: 73%;width: 25%;">{{onlineCourseDiscussData.length}}条评论</h1>
-			<ion-item ng-repeat="item in onlineCourseDiscussData" style="border-color: transparent;color: black;width:90%;margin-left:5%;">
-				<a style="color:black;font-size:15px;"><i class="icon ion-person"></i>&nbsp;{{item.elderName}}</a>
-				<p style="font-size:15px;">{{item.onlineCourseDiscussContent}}</p>
-			</ion-item>
-			<i class="icon ion-chevron-down" style="margin-left:50%;color:black;" ng-click="loadMoreDiscuss()"></i>
-		</div>
-		<br/><br/><br/><br/>
+        <div class="list" style="margin-top:54px;" ng-if="param.operation=='discuss'">
+            <ion-refresher pulling-text="下拉刷新" on-refresh="doRefresh()"></ion-refresher>
+            <a class="item item-discussList item-thumbnail-left" ng-repeat="item in onlineCourseDiscussData">
+                <img class="userPic" ng-src="{{item.weChatHeadPhoto}}">
+                <h2>{{item.wechatNickName}}</h2>
+                <span>发布于{{item.onlineCourseDiscussDate}}</span>
+                <p>{{item.onlineCourseDiscussContent}}</p>
+            </a>
+            <i class="icon ion-chevron-down" style="margin-left:50%;color:black;" ng-click="loadMoreDiscuss()"></i>
+        </div>
 	</ion-content>
-	<div class="bar bar-footer bar-energized">
-		<div class="title" ng-click="startCourse(param.courseId)">开始学习</div>
-	</div>
-</ion-view>
-<ion-view style="background:#f8f8f8;" ng-if="param.startCourseFlag">
-	<!--<ion-header-bar align-title="center" class="bar-energized">-->
-		<!--<div class="buttons">-->
-			<!--<button class="button" ng-click="returnRootNative()">&lt;返回</button>-->
-		<!--</div>-->
-		<!--<h1 class="title">{{param.onlineCourseDetail.onlineCourseName}}</h1>-->
-	<!--</ion-header-bar>-->
-	<ion-content>
-		<div>
-			<video ng-src="{{param.playURL}}"
-				   controls="controls" style="height:200px;width:100%;" />
-		</div>
-		<ion-list>
-			<style>
-				.talkOdd {
-					background-color: white;
-				}
-				.talkEven {
-					background-color: #f8f8f8;
-				}
-			</style>
-			<ion-item ng-repeat="item in param.onlineCourseDetail.onLineCourseDataDTOList"
-					  style="color:black"
-					  ng-class-odd="'talkOdd'"
-					  ng-class-even="'talkEven'">
-				<p style="font-size:15px;color:blue;" ng-click="playCourse($index)" ng-if="param.playIndex==$index">
-					{{item.onlineCourseName}}&nbsp;&nbsp;&nbsp;&nbsp;{{item.onlineCourseDuration}}小时
-				</p>
-				<p style="font-size:15px;" ng-click="playCourse($index)" ng-if="param.playIndex!=$index">
-					{{item.onlineCourseName}}&nbsp;&nbsp;&nbsp;&nbsp;{{item.onlineCourseDuration}}小时
-				</p>
-			</ion-item>
-		</ion-list>
-		<div class="list" style="margin-top:15px;">
-			<div class="item item-divider" style="text-align:center">
-				评论
-			</div>
-			<div class="item item-input-inset">
-				<label class="item-input-wrapper">
-					<input type="text" placeholder="评论内容" ng-model="param.submitDiscussContent">
-				</label>
-				<button class="button button-small button-assertive" ng-click="submitDiscuss()">
-					发表
-				</button>
-			</div>
-		</div>
-		<ion-list>
-			<ion-item ng-repeat="item in onlineCourseDiscussData" style="color:black">
-				<p class="item-note">{{item.onlineCourseDiscussDate|date:'yyyy/MM/dd HH:mm:ss'}}</p>
-				<a style="color:black;font-size:15px;"><i class="icon ion-person"></i>&nbsp;{{item.elderName}}</a>
-				<p style="font-size:15px;">{{item.onlineCourseDiscussContent}}</p>
-			</ion-item>
-			<i class="icon ion-chevron-down" style="margin-left:50%;color:black;" ng-click="loadMoreDiscuss()"></i>
-			<br/><br/>
-		</ion-list>
-	</ion-content>
+    <div class="bar bar-footer" style="background:#f8f8f8;padding:0px;margin-bottom:10px;"
+         ng-if="param.operation=='discuss'">
+        <div class="button button-full button-energized subscribe-btn"
+             style="font-size:16px;line-height:42px;" ng-click="attendDiscuss()">评论</div>
+    </div>
+    <div class="discussShade" ng-if="param.attendDiscuss">
+        <div class="discussContainer">
+            <p>
+                <span ng-click="cancelDiscuss()">取消</span>
+                <span style="margin-left:195px;color:blue" ng-click="submitDiscuss()">发表</span>
+            </p>
+            <textarea ng-model="param.submitDiscussContent"
+                      placeholder="请输入评论内容"></textarea>
+        </div>
+    </div>
 </ion-view>
