--- a/project/elder-project/src/main/resources/static/js/views/living/subscribeService.html
+++ b/project/elder-project/src/main/resources/static/js/views/living/subscribeService.html
@@ -3,7 +3,7 @@
         <div class="bar bar-header" style="height:60px;border-bottom:1px solid #ddd;">
             <div class="title" style="line-height:60px;">{{response.name}}</div>
         </div>
-        <form name="subscribeForm" novalidate style="" class="subscribeForm">
+        <form name="subscribeForm" novalidate class="subscribeForm">
             <div ng-if="info.indexOf('1')>=0">
                 <h2>自理能力</h2>
                 <div class="subscribeAble">
@@ -16,16 +16,17 @@
                 </div>
             </div>
             <div ng-if="info.indexOf('2')>=0">
-                <h2>联系信息</h2>
+                <h2>联系方式</h2>
                 <div class="list">
                     <label class="item item-input">
                         <input type="text" placeholder="输入姓名" ng-model="subscribeInfo.name">
                     </label>
                     <label class="item item-input">
-                        <input type="text" placeholder="输入电话" ng-model="subscribeInfo.phone">
+                        <input name="phoneNum" type="text" placeholder="输入电话" ng-model="subscribeInfo.phone" ng-pattern="/^1[3|4|5|7|8]\d{9}$/">
                     </label>
                 </div>
             </div>
+            <span ng-show="subscribeForm.phoneNum.$dirty && subscribeForm.phoneNum.$invalid" style="margin-left:15px;line-height:40px;color:#f00;">手机号输入有误，请重新输入</span>
             <div ng-if="info.indexOf('3')>=0">
                 <h2>服务地点</h2>
                 <div class="list">
@@ -46,7 +47,7 @@
                 </div>
             </div>
             <button class="button button-full button-energized subscribe-btn"
-                    ng-click="subscribeConfirm()" style="margin-top:30px;">确认预约</button>
+                    ng-click="subscribeConfirm()" style="margin-top:30px;" ng-disabled="subscribeForm.$invalid">确认预约</button>
         </form>
     </ion-content>
 </ion-view>
