--- a/project/elder-project/src/main/resources/static/styles/style.css
+++ b/project/elder-project/src/main/resources/static/styles/style.css
@@ -314,4 +314,57 @@ h2.myself_serviceTit{
     color: #fff;
     text-decoration:none;
 }
+/*评论*/
+.discussShade{
+    width:100%;
+    height:100%;
+    position:fixed;
+    left:0px;
+    top:0px;
+    z-index:11;
+    background:rgba(0,0,0,.6);
+}
+.discussContainer{
+    position:absolute;
+    top:30%;left:10%;
+    min-width:295px;
+    min-height:200px;
+    background:#fff;
+    border-radius:10px;
+}
+.discussContainer p{
+    margin-top:10px;
+    margin-left:19px;
+    font-size:16px;
+    color:#ff8e01
+}
+.discussContainer textarea{
+    margin-left:18px;
+    width:260px;
+    height:140px;
+    border: 1px solid #ccc;
+    padding: 5px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.item-discussList{
+    background:#f8f8f8;
+    border:none;
+    margin-top:5px;
+    padding-left:97px;
+}
+.item-discussList img.userPic{
+    max-width:60px;
+    max-height:60px;
+    margin-left:10px;
+}
+.item-discussList span{
+    color:#aaa;
+    font-size:14px;
+}
+.item-discussList p{
+    margin-top:7px;
+    text-overflow:initial;
+    white-space:initial;
+}
 
