--- a/project/elder-project/src/main/resources/templates/angular/elderIonicIndex.html
+++ b/project/elder-project/src/main/resources/templates/angular/elderIonicIndex.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/lib/fullcalendar.min.css"/>
     <link rel="stylesheet" href="styles/lib/spinners.css"/>
     <link rel="stylesheet" href="styles/healthFile.css?ver="+elderVersion/>
-    <link rel="stylesheet" href="styles/style.css"/>
+    <link rel="stylesheet" href="styles/style.css?ver="+elderVersion/>
 </head>
 <body>
 <ion-nav-view></ion-nav-view>
