--- a/project/elder-project/src/main/resources/static/js/views/community/activity/attendActivity.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/activity/attendActivity.html
@@ -1,4 +1,5 @@
 <ion-view style="background:#f8f8f8;">
+    <goback-menu></goback-menu>
 	<ion-content>
 		<div ng-if="!param.attended">
 			<div class="bar bar-header" style="height:60px;border-bottom:1px solid #ddd;">
