--- a/project/elder-project/src/main/resources/static/js/views/my/myClass.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myClass.html
@@ -1,4 +1,6 @@
 <ion-view style="background:#f8f8f8;">
+    <goback-menu></goback-menu>
+    <ion-content>
     <!--课程列表-->
     <div>
         <div ng-if="param.myCourseList.length==0"
@@ -28,4 +30,5 @@
             </div>
         </div>
     </div>
+    </ion-content>
 </ion-view>
