--- a/project/elder-project/src/main/resources/static/js/views/my/myService.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myService.html
@@ -1,4 +1,5 @@
 <ion-view style="background:#f8f8f8;">
+    <goback-menu></goback-menu>
 	<div class="tabs tabs-top tabs-striped" style="padding-top:2%;top:0px;background:#fff;border-bottom:1px solid #ddd;">
 		<a ng-class="{true:'tab-item active',false:'tab-item'}[param.tabValue=='inReview']" style="border-color:#ff8e01" ng-click="chooseTab('inReview')">
 			<p style="margin-top:-10px">审核中</p>
