--- a/project/elder-project/src/main/resources/static/js/views/phone/bindPhoneSuccess.html
+++ b/project/elder-project/src/main/resources/static/js/views/phone/bindPhoneSuccess.html
@@ -4,11 +4,11 @@
         <div ng-if="true" style="margin-top:30%;">
             <button class="button button-assertive"
                     style="width:38%;height:100%;margin-left:9%;background-color:#b2b2b2;border-radius:23px;"
-                    ng-click="">健康数据
+                    ng-click="goHealth()">健康数据
             </button>
             <button class="button button-assertive"
                     style="width:38%;height:100%;margin-left:3%;background-color:#ff8e01;border-radius:23px;"
-                    ng-click="">老友首页
+                    ng-click="goIndex()">老友首页
             </button>
         </div>
     </ion-content>
