--- a/project/elder-project/src/main/resources/static/js/views/community/course/courseList.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/course/courseList.html
@@ -1,4 +1,5 @@
 <ion-view style="background:#f8f8f8;">
+    <goback-menu></goback-menu>
     <ion-content>
         <ion-refresher pulling-text="下拉刷新" on-refresh="doRefresh()"></ion-refresher>
         <div class="list courseList">
