--- a/project/elder-project/src/main/resources/static/js/views/my/myActivity.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myActivity.html
@@ -1,11 +1,14 @@
 <ion-view style="background:#f8f8f8;">
-	<div class="list">
-		<a class="item"
-		   ng-repeat="item in param.recentPublishActive">
-			<h2 style="margin-bottom:8px;">{{item.activityName}}</h2>
-			<p><i class="icon ion-location" style="margin-left:2px;"></i>&nbsp;{{item.activityAddress}}</p>
-			<p><i class="icon ion-person"></i>&nbsp;{{item.activityAttendedNum}}人已报名</p>
-			<span ng-class="{true:'activityIcon',false:'activityIcon end'}[item.activityStatus=='进行中']">{{item.activityStatus}}</span>
-		</a>
-	</div>
+	<goback-menu></goback-menu>
+    <ion-content>
+        <div class="list">
+            <a class="item"
+               ng-repeat="item in param.recentPublishActive">
+                <h2 style="margin-bottom:8px;">{{item.activityName}}</h2>
+                <p><i class="icon ion-location" style="margin-left:2px;"></i>&nbsp;{{item.activityAddress}}</p>
+                <p><i class="icon ion-person"></i>&nbsp;{{item.activityAttendedNum}}人已报名</p>
+                <span ng-class="{true:'activityIcon',false:'activityIcon end'}[item.activityStatus=='进行中']">{{item.activityStatus}}</span>
+            </a>
+        </div>
+    </ion-content>
 </ion-view>
